2004-04-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* configure.in, aclocal.m4: Add `--with-xml' option.

	* shimbun/sb-zdnet.el: Removed.

	* w3mhack.el (w3mhack-module-list): New function.
	(w3mhack-examine-modules): Use the above.
	(w3mhack-compile): Use `w3mhack-module-list' instead of
	`w3mhack-examine-modules'.
	(w3mhack-generate-load-file): Likewise; Insert ^L to avoid an
	error of `update-file-autoloads' of old emacsen.

2004-04-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-treat-image-size): Default to t.

	* w3m-filter.el (w3m-filter-asahi-shimbun): Use marker to limit
	the search bound.

2004-04-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-generate-load-file): Save w3m-load.el file
	before performing `update-file-autoloads'.

2004-04-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Makefile.in (install-lisp): Do not install w3mhack.el.
	(install-package): Install neither w3mhack.el nor w3m-load.el.

2004-04-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-treat-image-size): Default to nil.
	(w3m-rendering-half-dump): Fix a logic determining whether to
	specify `-ppl' and `-ppc' options to the w3m command.

2004-04-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3mhack.el: Create w3m-load.el.
	(w3mhack-load-file): New variable.
	(w3mhack-examine-modules): Ignore `w3mhack-load-file'.
	(w3mhack-generate-load-file): New function.
	(w3mhack-compile): Call the above.

	* .cvsignore: Ignore w3m-load.el.

	* Makefile.in (clean): Remove w3m-load.el.

2004-04-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-nikkei.el (shimbun-nikkei-prepare-article-markets):
	Don't show any text if the article seems to have been expired.

2004-04-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-expand-path-name): In Emacs, don't bind
	directory-sep-char which is an obsolete variable.

2004-04-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el, w3m-favicon.el: Move snippets managing